--- a/PROJECT1/index.html
+++ b/PROJECT1/index.html
@@ -11,6 +11,9 @@
                <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/14089056_1166315286772395_4368229499414274466_n.jpg?oh=e08b0c46b5681200a0cd5394ced80967&oe=5867744A"/>
     <h1> Abigail Buckenberger </h1>
     <p> Hello! I love design, peanut butter, slow mornings and Bailey. I am a VCD Student at Eastern, and a Prepress Operator at ROSS Printing Company just trying to learn more and more everyday about design. </p>
+    <ul> 
+        <li> <a href="https://www.amazon.com/Great-Gatsby-F-Scott-Fitzgerald/dp/0743273567"> The Great Gatsby</a></li>
+    </ul>
     <ul>
         <li> <a href="http://www.imdb.com/title/tt1343092/?ref_=nv_sr_1"> The Great Gatsby</a></li>
         <li> <a href="http://www.imdb.com/title/tt1045658/?ref_=nv_sr_1">Silver Linings Playbook</a></li>
