--- a/PROJECT1/index.html
+++ b/PROJECT1/index.html
@@ -12,7 +12,7 @@
     <h1> Abigail Buckenberger </h1>
     <p> Hello! I love design, peanut butter, slow mornings and Bailey. I am a VCD Student at Eastern, and a Prepress Operator at ROSS Printing Company just trying to learn more and more everyday about design. </p>
     <ul> 
-        <li> <a href="https://www.amazon.com/Great-Gatsby-F-Scott-Fitzgerald/dp/0743273567"> The Great Gatsby</a></li>
+        <li> <a href="https://www.amazon.com/Great-Gatsby-F-Scott-Fitzgerald/dp/0743273567"> <img src="https://upload.wikimedia.org/wikipedia/en/f/f7/TheGreatGatsby_1925jacket.jpeg"/></a></li>
     </ul>
     <ul>
         <li> <a href="http://www.imdb.com/title/tt1343092/?ref_=nv_sr_1"> The Great Gatsby</a></li>
