--- a/PROJECT1/index.html
+++ b/PROJECT1/index.html
@@ -14,6 +14,7 @@
     <ul> 
         <li> <a href="https://www.amazon.com/Great-Gatsby-F-Scott-Fitzgerald/dp/0743273567"> <img src="https://upload.wikimedia.org/wikipedia/en/f/f7/TheGreatGatsby_1925jacket.jpeg"/></a></li>
     </ul>
+    <p> The Great Gatsby is such an entertaining read and contains so many reoccuring motifs/symbols that are too enticing NOT to love. </p>
     <ul>
         <li> <a href="http://www.imdb.com/title/tt1343092/?ref_=nv_sr_1"> The Great Gatsby</a></li>
         <li> <a href="http://www.imdb.com/title/tt1045658/?ref_=nv_sr_1">Silver Linings Playbook</a></li>
