--- a/PROJECT1/index.html
+++ b/PROJECT1/index.html
@@ -16,9 +16,9 @@
     </ul>
     <p> The Great Gatsby is such an entertaining read and contains so many reoccuring motifs/symbols that are too enticing NOT to love. </p>
     <ul>
-        <li> <a href="http://www.imdb.com/title/tt1343092/?ref_=nv_sr_1"> The Great Gatsby</a></li>
-        <li> <a href="http://www.imdb.com/title/tt1045658/?ref_=nv_sr_1">Silver Linings Playbook</a></li>
-        <li> <a href="http://www.imdb.com/title/tt0386117/?ref_=nv_sr_1">Where the Wild Things are</a></li>
+        <li> <img src="http://67.media.tumblr.com/8edc19a8a8088529b73c93940c9569e0/tumblr_n9tjz0zMIi1qb90noo1_500.jpg"/>Japanese</li>
+        <li> <img src="https://67.media.tumblr.com/b45dc8293ee96b7a1eb7f297b44e9114/tumblr_nmo1aohmNW1qfpcnio1_500.jpg"/>Italian</li>
+        <li> <img src="http://67.media.tumblr.com/9fb93751469142dca07243c99fc0853e/tumblr_mvyagj6ab21r194ubo1_500.png"/>Mexican</li>
     </ul>
         
     </body>
